--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background: whitesmoke;
+    margin-top: 20px;
+}
+.card{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    border: 0 solid transparent;
+    border-radius: 1;
+    margin-bottom: 30px;
+}
+.card-body{
+    flex: 1 1 auto;
+    padding: 1.5rem;
+}
